# OOCL.Shared/Models/OpenCl/OpenClUsageInfo.cs
@@ -20,8 +20,6 @@ namespace OOCL.Shared
 
 		public IEnumerable<PieChartData> PieChart { get; set; } = [];
 
-		public string Magnitude { get; set; } = "MBytes";
-
 
 		public OpenClUsageInfo() : base()
 		{
@@ -29,7 +27,7 @@ namespace OOCL.Shared
 		}
 
 		[JsonConstructor]
-		public OpenClUsageInfo(IOpenClObj? obj, bool readable = false) : base(obj)
+		public OpenClUsageInfo(IOpenClObj? obj, string magnitude = "KB") : base(obj)
 		{
 			if (obj == null)
 			{
@@ -44,10 +42,23 @@ namespace OOCL.Shared
 				return;
 			}
 
-			this.SizeUnit = readable ? "MBytes" : "Bytes";
-			this.TotalMemory = register.TotalMemoryBytes;
-			this.UsedMemory = register.UsedMemoryBytes;
-			this.FreeMemory = register.FreeMemoryBytes;
+			int magnitudeFactor = magnitude.ToUpper() switch
+			{
+				"KB" => 1024,
+				"MB" => 1024 * 1024,
+				"GB" => 1024 * 1024 * 1024,
+				_ => 1 // Default to Bytes
+			};
+
+			this.SizeUnit = magnitude;
+			
+			double totalMemory = (long.TryParse(register.TotalMemoryBytes, out long parsedTotal) ? parsedTotal : 0) / magnitudeFactor;
+			this.TotalMemory = totalMemory.ToString("N2");
+			double usedMemory = (long.TryParse(register.UsedMemoryBytes, out long parsedUsed) ? parsedUsed : 0) / magnitudeFactor;
+			this.UsedMemory = usedMemory.ToString("N2");
+			double freeMemory = (long.TryParse(register.FreeMemoryBytes, out long parsedFree) ? parsedFree : 0) / magnitudeFactor;
+			this.FreeMemory = freeMemory.ToString("N2");
+
 			this.UsagePercentage = register.UsagePercentageString;
 			this.usagePercentage = register.UsagePercentage;
 
